style : css card

--- a/index.html
+++ b/index.html
@@ -4,17 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div id="cardContainer">
         <div class="heading">
-            <h1>Lucky date calculator</h1>
-            <input type="date" name="date" id="input">
+            <h1>Lucky date calculator</h1></div>
+            <label for="date">enter the date:</label>
+            <input type="date" name="date" id="input"><br>
             <label for="#luckyNumber">your lucky number</label>
-            <input  id="luckyNumber" type="text" placeholder="enter your lucky number">
-            <button id="submit">Submit</button>
-            <div class="ouput"></div>
-        </div>
+            <input  id="luckyNumber" type="text" placeholder="enter your lucky number"><br>
+            <button id="submit">Submit</button><br>
+            <h3>your output will come here</h3><br>
+            <div id="ouput"></div>
     </div>
 
     <script src="app.js"></script>
