refactor: output.innerhtml

--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
             <h1>Lucky date calculator</h1></div>
             <label for="date">enter the date:</label>
             <input type="date" name="date" id="input"><br>
-            <label for="#luckyNumber">your lucky number</label>
+            <label for="luckyNumber">your lucky number:</label>
             <input  id="luckyNumber" type="text" placeholder="enter your lucky number"><br>
             <button id="submit">Submit</button><br>
             <h3>your output will come here</h3><br>
             <div id="ouput"></div>
     </div>
 
-    <script src="app.js"></script>
+<script src="app.js"></script> 
     
 </body>
 </html>
