fix: output div elemnt

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <input  id="luckyNumber" type="text" placeholder="enter your lucky number"><br>
             <button id="submit">Submit</button><br>
             <h3>your output will come here</h3><br>
-            <div id="ouput"></div>
+            <div id="output"></div>
     </div>
 
 <script src="app.js"></script> 
