fix: luck message

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="cardContainer">
-        <div class="heading">
-            <h1>Lucky date calculator</h1></div>
+    <div class="main center">
+        <div class="card">
+            <h1>Lucky date calculator</h1>
             <label for="date">enter the date:</label>
             <input type="date" name="date" id="input"><br>
             <label for="luckyNumber">your lucky number:</label>
@@ -17,6 +17,7 @@
             <button id="submit">Submit</button><br>
             <h3>your output will come here</h3><br>
             <div id="output"></div>
+        </div>
     </div>
 
 <script src="app.js"></script> 
