--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <div id="output"></div>
         </div>
     </div>
+    <footer>thanks for trying this web app <br> made with ❤️❤️ by <a href="https://sumitmehra-portifolio.netlify.app/">SUMIT MEHRA</a></footer>
 
 <script src="app.js"></script> 
     
