feat: gif added

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
             <button id="submit">Submit</button><br>
             <h3>your output will come here</h3><br>
             <div id="output"></div>
+            <iframe src= width="200" height="200" class="giphy-embed" frameborder="0" allowfullscreen></iframe>
+
         </div>
     </div>
     <footer>thanks for trying this web app <br> made with ❤️❤️ by <a href="https://sumitmehra-portifolio.netlify.app/">SUMIT MEHRA</a></footer>
