--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <button id="submit">Submit</button><br>
             <h3>your output will come here</h3><br>
             <div id="output"></div>
-            <iframe src= width="200" height="200" class="giphy-embed" frameborder="0" allowfullscreen></iframe>
+            <iframe  width="200" height="200" class="giphy-embed" frameborder="0" allowfullscreen></iframe>
 
         </div>
     </div>
